--- a/app/views/question/question_detail.phtml
+++ b/app/views/question/question_detail.phtml
@@ -51,6 +51,7 @@
             </div>
         </div>
     </div>
+    <?php if (isset($_SESSION["jwt"])): ?>
     <div class="card" style="width: 100%;height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow: 1%; margin-top:2% ">
         <div class="card-body" style="padding:1%">
             <div style="text-align: left;">
@@ -80,6 +81,7 @@
             </div>
         </div>
     </div>
+    <?php endif;?>
     <div class="card" style="width:100%;height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow:1%; margin-top:2% ">
         <div class="card-body" style="padding:1%">
             <div class="row">
@@ -152,34 +154,50 @@
     </div>
 </div>
 <div class="col-sm-3" style="text-align: left; padding:1%">
-    <div class="card" style="width: 100%;height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow: 1% ">
-        <div class="card-body" style="padding:2%">
-            <div class="row">
-                <div class="col-md-2">
-                    <img src="/UDPT-PROJECT/image/430945avatar.jpg" height="40px" width="40px" style="background-color: transparent;margin-top: 5px; border-radius: 10%;">
-                </div>
-                <div class="col-md-9" style="margin-left:1%">
-                    <div class="row">
-                        <b style="font-size: 16px;">Nguyễn Phạm Anh Tú</b>
-                        <p style="font-size: 12px;">tubato1999@gmail.com</p>
+    <?php if(isset($_SESSION["jwt"])){?>    
+        <div class="card" style="width: 100%;height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow: 1% ">
+            <div class="card-body" style="padding:2%">
+                <div class="row">
+                    <div class="col-md-2">
+                        <img src="<?php echo $data["user_profile"]["image"]?>" height="40px" width="40px" style="background-color: transparent;margin-top: 5px; border-radius: 10%;">
                     </div>
+                    <div class="col-md-9" style="margin-left:3%">
+                        <div class="row">
+                            <b style="font-size: 16px;"><?php echo $data["user_profile"]['name']?></b>
+                            <p style="font-size: 12px;"><?php echo $data["user_profile"]['email']?></p>
+                        </div>
+                    </div> 
                 </div>
-            </div>
-            <div class="row" style="margin-top:2%">
-                <p class="col-md-12" style="font-size: 15px;">Số câu hỏi: </p>
-                <p class="col-md-12" style="font-size: 15px;">Số câu trả lời: </p>
-                <p class="col-md-12" style="font-size: 15px;"></span><b>Thứ hạng (tuần): </b> 500 <span style="margin-left:1%;margin-right:1%; " class="glyphicon glyphicon-signal"></p>
-                <p class="col-md-12" style="color:#db9b00;text-align: center;">Hãy tích cực trả lời câu hỏi để tăng thứ hạng của mình bạn nhé!!</p>
+                <div class="row" style="margin-top:2%">
+                    <p class="col-md-12" style="font-size: 15px;">Số câu hỏi: <b><?php echo $data["user_profile"]['ques']?></b></p>
+                    <p class="col-md-12" style="font-size: 15px;">Số câu trả lời: <b><?php echo $data["user_profile"]['answer']?></b></p>
+                    <p class="col-md-12" style="font-size: 15px;"></span><b>Thứ hạng (Tháng):    </b> <b style="font-size: 20px; color:#db9b00">   <?php echo $data["user_profile"]['top']?></b>  <span style="margin-left:1%;margin-right:1%; " class="glyphicon glyphicon-signal"></p>
+                    <p class="col-md-12" style="color:#db9b00;text-align: center;">Hãy tích cực trả lời câu hỏi để tăng thứ hạng của mình bạn nhé!!</p>
+                </div>
             </div>
         </div>
-    </div>
-
+    <?php }?>
     <div class="card" style="width: 100%;height: auto;overflow: hidden;padding: 1%;background-color: #00000000;border-radius: 5px;box-shadow: 1%; margin-top: 2% ">
         <div class="card-body" style="padding:2%">
             <div style="text-align: center; font-size: 20px;color:#db9b00;">
-                <a href="" style="color:#db9b00;"><B>THÀNH VIÊN HĂNG HÁI NHẤT</B></a>
+                <a href="<?php echo _WEB_ROOT."/Home/Ranking"?>" style="color:#db9b00; margin-bottom:3%"><B>THÀNH VIÊN HĂNG HÁI NHẤT</B></a>
             </div>
+            <?php if (isset($top) && count($top) > 0) {
+                foreach ($top as $to) {?>
+                    <div class="row" style="vertical-align: middle;">
+                        <div class="col-md-2">
+                            <img src=" <?php if($to["image"] != null){echo $to['image'];}else{ echo _PUBLIC."/images/User.png";} ?>" height="40px" width="40px" style="background-color: transparent;margin-top: 5px; border-radius: 10%;">
+                        </div>
+                        <div class="col-md-7" style="padding-top:5%;padding-bottom:2%; ">
+                            <a href="<?php echo _WEB_ROOT."/userProfile/".$to["id_user"]?>" style="color:black;text-decoration: none;" ><p style="font-size: 14px;"><?php echo $to['name']?></p></a>
+                        </div>
+                        <div class="col-md-3" style="text-align: right; padding-top:5%;padding-bottom:2%;">
+                            <b style="font-size: 12px;"><?php echo $to['answer']?> Câu</b>
+                        </div>
 
+                    </div>
+            <?php } 
+            } ?>
         </div>
     </div>
     <div class="card" style="width: 100%;height: auto;overflow: hidden;padding: 1%;background-color: #00000000;border-radius: 5px;box-shadow: 1%; margin-top: 2%">
@@ -187,8 +205,9 @@
             <div style="text-align: center; font-size: 20px;">
                 <B>Bạn muốn hỏi điều gì?</B>
             </div>
-            <button style="width:100%;background-color: #db9b00;padding: 12px;text-align: center;color: #fff;border-radius: 5px;text-transform: uppercase;font-weight: 700;margin-top:3%" data-toggle="modal" data-target="#makequestion"><img src="https://hoidap247.com/static/img/icon-question.png" style="margin-right:2%">Đặt câu hỏi</button>
-
+            <?php if(!isset($_SESSION["jwt"])) {echo '<a href="'._WEB_ROOT.'/login" style="width:100%">';}?>
+            <button style="width:100%;background-color: #db9b00;padding: 12px;text-align: center;color: #fff;border-radius: 5px;text-transform: uppercase;font-weight: 700;margin-top:3%"<?php if(isset($_SESSION["jwt"])){ echo 'data-toggle="modal" data-target="#makequestion"';} ?>  ><img src="https://hoidap247.com/static/img/icon-question.png" style="margin-right:2%">Đặt câu hỏi</button>
+            <?php if(!isset($_SESSION["jwt"])) {echo "</a>";}?>
         </div>
     </div>
 </div>
@@ -387,5 +406,8 @@
             });
 
         });
+
+
     });
+
 </script>
