--- a/app/views/header-footer/header.phtml
+++ b/app/views/header-footer/header.phtml
@@ -31,7 +31,7 @@
                     <li>
                         <a href="<?php echo _WEB_ROOT ?>/userProfile/<?php echo $_SESSION["user_id"] ?>">
                             <?php
-                            if ($_SESSION['image'] != null) : ?>
+                            if ($data["user_profile"]["image"] != null) : ?>
                                 <img src="<?php echo $data["user_profile"]["image"] ?>" height="40px" width="40px" style="background-color: transparent;margin-top: -5px; border-radius: 50%;" />
                             <?php else : ?>
                                 <img src="<?php echo _PUBLIC ?>/images/User.png" height="40px" width="40px" style="background-color: transparent;margin-top: -5px;border-radius: 50%;" />
