user send report

--- a/app/views/header-footer/footer.phtml
+++ b/app/views/header-footer/footer.phtml
@@ -5,8 +5,8 @@
                 <div class="col-md-3 col-sm-6">
                     <!--Column1-->
                     <div class="footer-pad">
-                        <a href="/UDPT-PROJECT">
-                            <img src="/UDPT-PROJECT/public/images/Logo.jpg" height="80px" width="100px" style="border-radius: 5px;margin-left: 30px;" />
+                        <a href="<?php echo _WEB_ROOT ?>">
+                            <img src="<?php echo _PUBLIC ?>/images/Logo.jpg" height="80px" width="100px" style="border-radius: 5px;margin-left: 30px;" />
                             <h4><b>Question And Answer</b></h4>
                         </a>
 
@@ -46,7 +46,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 copy">
-                    <p class="text-center">&copy; Copyright 2018 - Company Name. All rights reserved.</p>
+                    <p class="text-center">&copy; Copyright 2021 - UDPT-18. All rights reserved.</p>
                 </div>
             </div>
 
