--- a/app/views/user/userProfile.phtml
+++ b/app/views/user/userProfile.phtml
@@ -268,7 +268,7 @@
                                 <?php
                                   }
                                 } else {
-                                  echo "<div>Bạn chưa đặt câu hỏi nào hết!</div>";
+                                  echo '<div class="col-md-12" style="text-align: center;">Bạn chưa trả lời câu hỏi nào hết!</div>';
                                 } ?>
                             </div>
                         </div>
@@ -400,7 +400,7 @@
                                 <?php
                                     }
                                   } else {
-                                    echo "<div>Bạn chưa trả lời câu hỏi nào hết!</div>";
+                                    echo '<div class="col-md-12" style="text-align: center;">Bạn chưa trả lời câu hỏi nào hết!</div>';
                                   } 
                                 ?>
                             </div>
