--- a/app/layouts/questionLayout.phtml
+++ b/app/layouts/questionLayout.phtml
@@ -109,12 +109,12 @@ $categoriesRender = $res["categories"];
     </div>
   </div>
 </div>
-  <div class="modal fade" id="loadMe" tabindex="-1" role="dialog" aria-labelledby="loadMeLabel">
-    <div class="modal-dialog modal-sm" role="document">
-      <div class="modal-content">
-        <div class="modal-body row">
-          <div id="loader"></div>
-          <div style="margin-left:5%; font-size: 30px;">Loading..........</div>
+<div class="modal fade" id="loadMe" tabindex="-1" role="dialog" aria-labelledby="loadMeLabel" >
+    <div class="modal-dialog modal-sm" role="document" >
+      <div class="modal-content" style="background-color: #cccccc10;">
+        <div class="modal-body row" >
+          <div id="loader" style="color: red;"></div>
+          <div style="margin-left:5%; font-size: 30px;color: white "><b>Loading..........</b></div>
         </div>
       </div>
     </div>
