thêm add/delete email nhận thông báo

--- a/app/views/question/question_detail.phtml
+++ b/app/views/question/question_detail.phtml
@@ -159,7 +159,7 @@
             <div class="card-body" style="padding:2%">
                 <div class="row">
                     <div class="col-md-2">
-                        <img src="<?php echo $data["user_profile"]["image"]?>" height="40px" width="40px" style="background-color: transparent;margin-top: 5px; border-radius: 10%;">
+                        <img src="<?php if($data["user_profile"]["image"] !=null){echo $data["user_profile"]["image"];}else{echo _PUBLIC."/images/User.png";} ?>" height="40px" width="40px" style="background-color: transparent;margin-top: 5px; border-radius: 10%;">
                     </div>
                     <div class="col-md-9" style="margin-left:3%">
                         <div class="row">
