--- a/app/views/question/question_detail.phtml
+++ b/app/views/question/question_detail.phtml
@@ -360,7 +360,7 @@
         });
 
         $(".like_ans").on("click", function() {
-            const td = $(this).parent('div').find('span');
+            const td = $(this).parent('p').find('span');
             var i = td[0].innerHTML;
 
             var data = {
