fix url and add data pictures

--- a/app/views/user/userProfile.phtml
+++ b/app/views/user/userProfile.phtml
@@ -1,6 +1,6 @@
 <?php require_once "./app/config.php"; ?>
 <div class="col-sm-10" style="padding:1%">
-    <div class="row" style="border-radius: 10px;border-style: solid;padding:1%;border-color: #8f8d8d50; margin-left:1%;margin-right:1%;margin-botton:1%;  background-color: #f1f1f1">
+    <div class="row" style="border-radius: 10px;border-style: solid;padding:1%;border-color: #8f8d8d50; margin-left:1%;margin-right:1%;margin-bottom:1%;  background-color: #f1f1f1">
         <div class="col-md-4">
             <div class="profile-img">
                 <form id="upfile" method="POST">
@@ -96,7 +96,7 @@
                             Answer</button>
                     </div>
                 </div>
-                <div class="tabs__contents" style="border-radius: 10px;border-style: solid;padding:1%;border-color: #8f8d8d50; margin-left:1%;margin-right:1%;margin-botton:1%; min-height:500px; max-height:800px; background-color: #f1f1f1;overflow-y: scroll;overflow-x:hidden">
+                <div class="tabs__contents" style="border-radius: 10px;border-style: solid;padding:1%;border-color: #8f8d8d50; margin-left:1%;margin-right:1%;margin-bottom:1%; min-height:500px; max-height:800px; background-color: #f1f1f1;overflow-y: scroll;overflow-x:hidden">
                     <div data-tab-content="1" role="tabpanel" tabindex="0" id="tab-1" class="tabs__content tabs__content--current">
                         <div class="container">
                             <div class="row">
